--- a/task-01.html
+++ b/task-01.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Task-01</title>
   </head>
+  <header>
+    <a href="./index.html">На главную</a>
+  </header>
   <body>
     <ul id="categories">
       <li class="item">
