--- a/task-02.html
+++ b/task-02.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Task-02</title>
   </head>
+  <header>
+    <a href="./index.html">На главную</a>
+  </header>
   <body>
     <ul id="ingredients"></ul>
     <script type="module" src="/src/task-02.js"></script>
