--- a/task-03.html
+++ b/task-03.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>task-03</title>
+    <a rel="stylesheet" href="./css/style.css"></a>
   </head>
+  <header>
+    <a href="./index.html">На главную</a>
+  </header>
   <body>
     <ul id="gallery"></ul>
 
