--- a/task-04.html
+++ b/task-04.html
@@ -9,5 +9,12 @@
   <header>
     <a href="./index.html">На главную</a>
   </header>
-  <body></body>
+  <body>
+    <div id="counter">
+      <button type="button" data-action="decrement">-1</button>
+      <span id="value">0</span>
+      <button type="button" data-action="increment">+1</button>
+    </div>
+    <script type="module" src="/src/task-04.js"></script>
+  </body>
 </html>
