--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <header>
+  <body>
     <a href="./task-01.html">Task-01</a>
     <a href="./task-02.html">Task-02</a>
     <a href="./task-03.html">Task-03</a>
@@ -16,5 +16,5 @@
     <a href="./task-07.html">Task-07</a>
     <a href="./task-08.html">Task-08</a>
   </header>
-  <body></body>
+  </body>
 </html>
