--- a/task-05.html
+++ b/task-05.html
@@ -9,5 +9,10 @@
   <header>
     <a href="./index.html">На главную</a>
   </header>
-  <body></body>
+  <body>
+    <input type="text" placeholder="Ваше имя?" id="name-input" />
+    <h1>Привет, <span id="name-output">незнакомец</span>!</h1>
+
+    <script type="module" src="/src/task-05.js"></script>
+  </body>
 </html>
