--- a/task-06.html
+++ b/task-06.html
@@ -5,9 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Task-06</title>
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <header>
     <a href="./index.html">На главную</a>
   </header>
-  <body></body>
+  <body>
+    <input type="text" id="validation-input" data-length="6" placeholder="Введи 6 символов" />
+    <script type="module" src="/src/task-06.js"></script>
+  </body>
 </html>
