--- a/task-07.html
+++ b/task-07.html
@@ -6,8 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Task-07</title>
   </head>
-  <header>
+
+  <body>
     <a href="./index.html">На главную</a>
-  </header>
-  <body></body>
+    <input id="font-size-control" type="range" />
+    <br />
+    <span id="text">Абракадабра!</span>
+    <script type="module" src="/src/task-07.js"></script>
+  </body>
 </html>
