--- a/index.html
+++ b/index.html
@@ -7,13 +7,19 @@
     <title>Document</title>
   </head>
   <body>
-    <a href="./task-01.html">Task-01</a>
-    <a href="./task-02.html">Task-02</a>
-    <a href="./task-03.html">Task-03</a>
-    <a href="./task-04.html">Task-04</a>
-    <a href="./task-05.html">Task-05</a>
-    <a href="./task-06.html">Task-06</a>
-    <a href="./task-07.html">Task-07</a>
-    <a href="./task-08.html">Task-08</a>
+    <ul>
+      <li><a href="./task-01.html">Task-01</a></li>
+      <li>
+        <a href="./task-02.html">Task-02</a>
+      </li>
+      <li><a href="./task-03.html">Task-03</a></li>
+      <li><a href="./task-04.html">Task-04</a></li>
+      <li><a href="./task-05.html">Task-05</a></li>
+      <li><a href="./task-06.html">Task-06</a></li>
+      <li>
+        <a href="./task-07.html">Task-07</a>
+      </li>
+      <li><a href="./task-08.html">Task-08</a></li>
+    </ul>
   </body>
 </html>
