--- a/index.html
+++ b/index.html
@@ -5,7 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <style>
+      body {
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
+          Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        background-color: #fff;
+        color: #424242;
+        line-height: 1.5;
+      }
+    </style>
   </head>
+
   <body>
     <ul>
       <li><a href="./task-01.html">Task-01</a></li>
