--- a/task-01.html
+++ b/task-01.html
@@ -8,7 +8,7 @@
   </head>
 
   <body>
-    <a href="./index.html">На главную</a>
+    <p><a href="index.html">На главную</a></p>
     <ul id="categories">
       <li class="item">
         <h2>Животные</h2>
@@ -41,6 +41,6 @@
         </ul>
       </li>
     </ul>
-    <script type="module" src="/src/task-01.js"></script>
+    <script type="module" src="/js/task-01.js"></script>
   </body>
 </html>
