--- a/task-02.html
+++ b/task-02.html
@@ -8,8 +8,8 @@
   </head>
 
   <body>
-    <a href="./index.html">На главную</a>
+    <p><a href="index.html">На главную</a></p>
     <ul id="ingredients"></ul>
-    <script type="module" src="/src/task-02.js"></script>
+    <script type="module" src="/js/task-02.js"></script>
   </body>
 </html>
