--- a/task-04.html
+++ b/task-04.html
@@ -8,12 +8,12 @@
   </head>
 
   <body>
-    <a href="./index.html">На главную</a>
+    <p><a href="index.html">На главную</a></p>
     <div id="counter">
       <button type="button" data-action="decrement">-1</button>
       <span id="value">0</span>
       <button type="button" data-action="increment">+1</button>
     </div>
-    <script type="module" src="/src/task-04.js"></script>
+    <script type="module" src="/js/task-04.js"></script>
   </body>
 </html>
