--- a/task-05.html
+++ b/task-05.html
@@ -8,10 +8,10 @@
   </head>
 
   <body>
-    <a href="./index.html">На главную</a>
+    <p><a href="index.html">На главную</a></p>
     <input type="text" placeholder="Ваше имя?" id="name-input" />
     <h1>Привет, <span id="name-output">незнакомец</span>!</h1>
 
-    <script type="module" src="/src/task-05.js"></script>
+    <script type="module" src="/js/task-05.js"></script>
   </body>
 </html>
