--- a/task-07.html
+++ b/task-07.html
@@ -8,10 +8,10 @@
   </head>
 
   <body>
-    <a href="./index.html">На главную</a>
+    <p><a href="index.html">На главную</a></p>
     <input id="font-size-control" type="range" />
     <br />
     <span id="text">Абракадабра!</span>
-    <script type="module" src="/src/task-07.js"></script>
+    <script type="module" src="/js/task-07.js"></script>
   </body>
 </html>
