--- a/src/task-03.html
+++ b/src/task-03.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>task-03</title>
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="/css/style.css" />
   </head>
 
   <body>
-    <p><a href="index.html">На главную</a></p>
+    <p><a href="/index.html">На главную</a></p>
     <ul id="gallery"></ul>
 
     <script type="module" src="/js/task-03.js"></script>
