--- a/src/task-06.html
+++ b/src/task-06.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Task-06</title>
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="/css/style.css" />
   </head>
 
   <body>
-    <p><a href="index.html">На главную</a></p>
+    <p><a href="/index.html">На главную</a></p>
     <input type="text" id="validation-input" data-length="6" placeholder="Введи 6 символов" />
     <script type="module" src="/js/task-06.js"></script>
   </body>
