--- a/src/task-01.html
+++ b/src/task-01.html
@@ -8,7 +8,7 @@
   </head>
 
   <body>
-    <p><a href="/index.html">На главную</a></p>
+    <p><a href="./index.html">На главную</a></p>
     <ul id="categories">
       <li class="item">
         <h2>Животные</h2>
