--- a/index.html
+++ b/index.html
@@ -18,18 +18,18 @@
 
   <body>
     <ul>
-      <li><a href="./src/task-01.html">Task-01</a></li>
+      <li><a href="/src/task-01.html">Task-01</a></li>
       <li>
-        <a href="./src/task-02.html">Task-02</a>
+        <a href="/src/task-02.html">Task-02</a>
       </li>
-      <li><a href="./src/task-03.html">Task-03</a></li>
-      <li><a href="./src/task-04.html">Task-04</a></li>
-      <li><a href="./src/task-05.html">Task-05</a></li>
-      <li><a href="./src/task-06.html">Task-06</a></li>
+      <li><a href="/src/task-03.html">Task-03</a></li>
+      <li><a href="/src/task-04.html">Task-04</a></li>
+      <li><a href="/src/task-05.html">Task-05</a></li>
+      <li><a href="/src/task-06.html">Task-06</a></li>
       <li>
-        <a href="./src/task-07.html">Task-07</a>
+        <a href="/src/task-07.html">Task-07</a>
       </li>
-      <li><a href="./src/task-08.html">Task-08</a></li>
+      <li><a href="/src/task-08.html">Task-08</a></li>
     </ul>
   </body>
 </html>
