--- a/src/task-03.html
+++ b/src/task-03.html
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <p><a href="/index.html">На главную</a></p>
+    <p><a href="./index.html">На главную</a></p>
     <ul id="gallery"></ul>
 
     <script type="module" src="/js/task-03.js"></script>
