--- a/src/task-08.html
+++ b/src/task-08.html
@@ -8,6 +8,6 @@
   </head>
 
   <body>
-    <p><a href="/index.html">На главную</a></p>
+    <p><a href="./index.html">На главную</a></p>
   </body>
 </html>
