--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Задачи модуля 7</title>
     <style>
       body {
         font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
@@ -18,9 +18,9 @@
 
   <body>
     <ul>
-      <li><a href="/src/task-01.html">Task-01</a></li>
+      <li><a href="./task-01.html">Task-01</a></li>
       <li>
-        <a href="/src/task-02.html">Task-02</a>
+        <a href="task-02.html">Task-02</a>
       </li>
       <li><a href="/src/task-03.html">Task-03</a></li>
       <li><a href="/src/task-04.html">Task-04</a></li>
