--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 
   <body>
     <ul>
-      <li><a href="./task-01.html">Task-01</a></li>
+      <li><a href="/src/task-01.html">Task-01</a></li>
       <li>
-        <a href="task-02.html">Task-02</a>
+        <a href="/src/task-02.html">Task-02</a>
       </li>
       <li><a href="/src/task-03.html">Task-03</a></li>
       <li><a href="/src/task-04.html">Task-04</a></li>
