--- a/task-02.html
+++ b/task-02.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Task-08</title>
+    <title>Task-02</title>
   </head>
 
   <body>
-    <p><a href="./index.html">На главную</a></p>
+    <p><a href="index.html">На главную</a></p>
+    <ul id="ingredients"></ul>
+    <script type="module" src="/js/task-02.js"></script>
   </body>
 </html>
