--- a/task-03.html
+++ b/task-03.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Task-06</title>
+    <title>task-03</title>
     <link rel="stylesheet" href="/css/style.css" />
   </head>
 
   <body>
-    <p><a href="./index.html">На главную</a></p>
-    <input type="text" id="validation-input" data-length="6" placeholder="Введи 6 символов" />
-    <script type="module" src="/js/task-06.js"></script>
+    <p><a href="index.html">На главную</a></p>
+    <ul id="gallery"></ul>
+
+    <script type="module" src="/js/task-03.js"></script>
   </body>
 </html>
