--- a/task-08.html
+++ b/task-08.html
@@ -4,14 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>task-03</title>
-    <link rel="stylesheet" href="/css/style.css" />
+    <title>Task-08</title>
   </head>
 
   <body>
-    <p><a href="./index.html">На главную</a></p>
-    <ul id="gallery"></ul>
-
-    <script type="module" src="/js/task-03.js"></script>
+    <p><a href="index.html">На главную</a></p>
   </body>
 </html>
