--- a/task-01.html
+++ b/task-01.html
@@ -41,6 +41,6 @@
         </ul>
       </li>
     </ul>
-    <script type="module" src="/js/task-01.js"></script>
+    <script type="module" src="js/task-01.js"></script>
   </body>
 </html>
