--- a/task-02.html
+++ b/task-02.html
@@ -10,6 +10,6 @@
   <body>
     <p><a href="index.html">На главную</a></p>
     <ul id="ingredients"></ul>
-    <script type="module" src="/js/task-02.js"></script>
+    <script type="module" src="js/task-02.js"></script>
   </body>
 </html>
