--- a/task-03.html
+++ b/task-03.html
@@ -12,6 +12,6 @@
     <p><a href="index.html">На главную</a></p>
     <ul id="gallery"></ul>
 
-    <script type="module" src="/js/task-03.js"></script>
+    <script type="module" src="js/task-03.js"></script>
   </body>
 </html>
