--- a/task-04.html
+++ b/task-04.html
@@ -14,6 +14,6 @@
       <span id="value">0</span>
       <button type="button" data-action="increment">+1</button>
     </div>
-    <script type="module" src="/js/task-04.js"></script>
+    <script type="module" src="js/task-04.js"></script>
   </body>
 </html>
