--- a/task-05.html
+++ b/task-05.html
@@ -12,6 +12,6 @@
     <input type="text" placeholder="Ваше имя?" id="name-input" />
     <h1>Привет, <span id="name-output">незнакомец</span>!</h1>
 
-    <script type="module" src="/js/task-05.js"></script>
+    <script type="module" src="js/task-05.js"></script>
   </body>
 </html>
