--- a/task-06.html
+++ b/task-06.html
@@ -11,6 +11,6 @@
   <body>
     <p><a href="index.html">На главную</a></p>
     <input type="text" id="validation-input" data-length="6" placeholder="Введи 6 символов" />
-    <script type="module" src="/js/task-06.js"></script>
+    <script type="module" src="js/task-06.js"></script>
   </body>
 </html>
