--- a/task-07.html
+++ b/task-07.html
@@ -12,6 +12,6 @@
     <input id="font-size-control" type="range" />
     <br />
     <span id="text">Абракадабра!</span>
-    <script type="module" src="/js/task-07.js"></script>
+    <script type="module" src="js/task-07.js"></script>
   </body>
 </html>
